# robotframework-benchmark

./: .gitignore  PIPE  README.md  pyproject.toml
atests/: cli.robot
atests/benchmarks/: execution.robot  memory.robot  model.robot  parsing.robot
atests/resources/: BenchmarkLibrary.py  common.resource
atests/utils/: metrics.robot  reporting.robot
src/robotframework_benchmark/: __init__.py  cli.py
src/robotframework_benchmark/benchmarks/: __init__.py  base.py  execution.py  memory.py  model.py  parsing.py
src/robotframework_benchmark/benchmarks/fixtures/execution/: keyword.robot  simple.robot
src/robotframework_benchmark/benchmarks/fixtures/memory/: memory_fixture.robot
src/robotframework_benchmark/benchmarks/fixtures/model/: fixture.robot
src/robotframework_benchmark/benchmarks/fixtures/parsing/: large.robot  medium.robot  resource.resource  small.robot
src/robotframework_benchmark/utils/: __init__.py  metrics.py  reporting.py
suites/: README.md
suites/execution/: README.md
suites/memory/: README.md
suites/model/: README.md
suites/parsing/: README.md
tests/: test_base_benchmark.py  test_benchmarks.py  test_cli.py  test_metrics.py
